fixed bgimg on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -16,24 +16,6 @@ p {
   box-sizing: border-box;
 }
 
-.bgImg::before {
-  content: "";
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0)),
-    url(./Images/bakgrunn.jfif);
-  position: fixed;
-  background-attachment: scroll;
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  filter: blur(5px);
-  margin: -10px;
-  z-index: -1;
-}
-
 .navBtn {
   display: inline;
   margin-top: 1rem;
